Curso Geekipedia | Vid 5 | Añadido ejemplo @GetMapping

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,2 @@
 spring.application.name=cursoSpringBoot
-server.port=8081    //<-- para cambiar el número de puerto de la aplicación
+server.port=8081
